--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ google-cloud-dataplex==1.10.0
 pandas==2.1.4
 db-dtypes==1.2.0
 streamlit==1.29.0
-adk==0.1.0
+# adk==0.1.0  # Not available on PyPI, uncomment if local wheel is provided
 requests==2.31.0
 plotly==5.18.0
 openpyxl==3.1.2
